<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.embeddedsystemscareerguide.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_learning"
        android:name="com.example.embeddedsystemscareerguide.ui.learningpath.LearningPathFragment"
        android:label="@string/menu_learning"
        tools:layout="@layout/fragment_learning_path" />

    <fragment
        android:id="@+id/nav_practice"
        android:name="com.example.embeddedsystemscareerguide.ui.practice.PracticeFragment"
        android:label="Practice"
        tools:layout="@layout/fragment_practice" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.embeddedsystemscareerguide.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.embeddedsystemscareerguide.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.embeddedsystemscareerguide.ui.chat.ChatFragment"
        android:label="AI Tutor"
        tools:layout="@layout/fragment_chat" />

</navigation>